# pdfuse

./: .gitignore  README.md  pyproject.toml  report.tex
.github/workflows/: ci.yml
pdfuse/: __init__.py  cli.py  operations.py  utils.py
src/pdfuse/: __init__.py  batch.py  cli.py  operations.py
tests/: conftest.py  test_batch.py  test_cli.py  test_cli_folder.py  test_operations.py  test_utils.py
